init-containers.yml
apiVersion: v1
kind: Pod
metadata:
 name: init-pod
spec:
 containers:
 - name: nginx
   image: nginx
