liveness-pod-http.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod-http
spec:
  containers:
    - name: nginx
      image: nginx
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
