multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
    - name: redis
      image: redis
    - name: nginx
      image: nginx
    - name: couchbase
      image: couchbase
    - name: busybox
      image: busybox
      command: ['sleep','3000']
