network-policies-test-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: network-policies-test-busybox
  namespace: test-network-policies
  labels: 
    app: client
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command: ['sh','-c','while true; do sleep 5; done']
