network-policies-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: network-policies-test
  namespace: test-network-policies
  labels: 
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
