never-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: never-pod
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox
      command: ['sh','-c','sleep 15; bad command']
