pod3.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: python
    image: python
    command:  
    - "sh"
    - "-c"
    - 'sleep 1000'
    resources:
      limits:
        cpu: 10
        memory: 128Mi
