sidecar.yml
apiVersion: v1
kind: Pod
metadata:
 name: sidecar-pod
spec:
 containers:
 - name: busybox1
   image: busybox
   command: ['sh', '-c', 'while true; do echo logs data >> /output/output.log; sleep 5; done']
   volumeMounts:
   - name: sharedvol
     mountPath: /output
 - name: sidecar
   image: busybox
   command: ['sh', '-c', 'tail -f /input/output.log']
   volumeMounts:
   - name: sharedvol
     mountPath: /input
 volumes:
 - name: sharedvol
   emptyDir: {}
