deployment-svc-example.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-svc-example
  namespace: service-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: svc-example
  template:
    metadata:
      labels:
        app: svc-example
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip
  namespace: service-test
spec:
  type: ClusterIP
  selector:
    app: svc-example
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-svc-test
  namespace: service-test
spec:
  containers:
    - image: radial/busyboxplus:curl
      name: busybox
      command: ['sh','-c','sleep 1000']
