svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
        name: svc-nodeport
spec:
        type: NodePort
        selector:
                app: svc-example
        ports:
              - protocol: TCP
                port: 80
                targetPort: 80
                nodePort: 30080
