network-policies-test-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networkpolicy
  namespace: test-network-policies 
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
                    kubernetes.io/metadata.name: test-network-policies
      ports:
      - protocol: TCP
        port: 80
  egress:
